# Nexera_Backend

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
.ebextensions/: django.config
chat26/: chunks_kv_data.pkl  graph_igraph_data.pklz  map_e2r_blob_data.pkl  map_r2c_blob_data.pkl
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
myFile/: chunks_kv_data.pkl  graph_igraph_data.pklz  map_e2r_blob_data.pkl  map_r2c_blob_data.pkl
nexera/: asgi.py  settings.py  urls.py  wsgi.py
nexgen/: apps.py  models.py
nexgen/apis/: dataScraper.py  helpers.py  serializers.py  urls.py  views.py
nexgen/migrations/: 0001_initial.py  0002_graphdata.py
