[project]
name = "nexera-legal"
version = "0.1.0"
description = ""
authors = [
    { name = "Idrees Ghazi", email = "i.klassic99@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11,<4.0"

dependencies = [
    "langchain>=0.3.18",
    "django (>=5.1.6,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "langchain-openai (>=0.3.5,<0.4.0)",
    "langchain-core (>=0.3.35,<0.4.0)",
    "fast-graphrag (>=0.0.4,<0.0.5)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"